Remove attempt at fixing spacing with inline code
It's only causing issues. It's not that big of a deal.

--- a/doc/_support/styles/base.less
+++ b/doc/_support/styles/base.less
@@ -24,15 +24,6 @@ body {
 tt, code, kbd, samp, pre, span.command {
 	//font-family: monospace;
 
-    // Without this slight adjustment, the monospaced text seems too smushed
-    // with the non-monospaced text.
-    // (Using a padding will cause weirdness on newlines.)
-    &::before, &::after {
-        content: " ";
-        display: inline;
-        font-size: 0.4em;
-    }
-
     // The monospace font often has a character height that's visually bigger 
     // than the non-monospaced ones. This adjusts for that.
     font-size: 0.9em;
